@@ -1,5 +1,7 @@
 package com.deliverytech.delivery_api.config;
 
+import java.util.List;
+
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
@@ -7,8 +9,6 @@ import io.swagger.v3.oas.models.OpenAPI;
 import io.swagger.v3.oas.models.info.Contact;
 import io.swagger.v3.oas.models.info.Info;
 import io.swagger.v3.oas.models.servers.Server;
-import java.util.Arrays;
-
 
 @Configuration
 public class OpenApiConfig {
@@ -17,9 +17,10 @@ public class OpenApiConfig {
         return new OpenAPI()
             .info( new Info()
                 .title("Delivery API")
-                .description("API para gerenciamento")
+                .description("Api para gerenciamento.")
                 .version("1.0")
-                .contact(new Contact().name("Suporte").email("suporte@email.com"))
-            ).servers(Arrays.asList(new Server().url("http://localhost:8081").description("Servidor local")));
+                .contact(new Contact().name("Suporte").email("suporte@exemplo.com"))
+            ).servers(List.of(new Server().url("http://localhost:8081").description("Servidor local")));   
     }
+    
 }
